<?xml version="1.0"?>
<package format="2">
    <name>camera_info_plugins</name>
    <version>0.0.0</version>
    <description>camera info rviz plugin</description>
    <maintainer email="kyabuuchi@todo.todo">kyabuuchi</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <depend>std_msgs</depend>
    <depend>rviz</depend>

    <build_depend>qtbase5-dev</build_depend>
    <exec_depend>libqt5-core</exec_depend>
    <exec_depend>libqt5-gui</exec_depend>
    <exec_depend>libqt5-widgets</exec_depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>

</package>


